--- a/frontend/dumpster-dove/index.html
+++ b/frontend/dumpster-dove/index.html
@@ -7,6 +7,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Dumps" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dumps.online - Anonymous College Posts</title>
     <meta name="description" content="A safe, judgment-free space for college students to share thoughts, frustrations, and ideas anonymously" />
